feat&style: submit and interactive styles

--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -8,6 +8,7 @@
   --color-gray: #898da9;
   --color-border-default: #cbb6e5;
   --color-border-focus: #761be4;
+  --color-error: #ed4545;
 
   --border-width-thin: 1px;
   --border-width-thick: 2px;
