--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,10 +3,40 @@
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
     Roboto, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+
+  --color-text: #000853;
+  --color-bg: #eee6f6;
+  --color-form-element-bg: #ffffff;
+  --color-border-default: #cbb6e5;
+  --color-border-focus: #761be4;
+  --border-width-thin: 1px;
+  --border-width-thick: 2px;
+  --spacing-form: clamp(342px, 100%, 426px);
 }
 
 @layer base {
   body {
-    @apply bg-[#eee6f6] text-[#000853] font-sans;
+    @apply font-sans;
+    @apply bg-bg text-text;
+    @apply p-4;
+  }
+
+  h2 {
+    @apply mb-8 font-medium text-[24px] leading-[17px] tracking-[0];
+  }
+
+  label {
+    @apply mb-2 font-normal text-[16px] leading-[12px];
+  }
+}
+
+@layer components {
+  .input {
+    @apply h-12 px-3 text-base;
+    @apply font-medium;
+    @apply border-thin border-border-default rounded-lg;
+    @apply bg-form-element-bg;
+    @apply outline-none;
+    @apply focus:border-thick focus:border-border-focus;
   }
 }
