--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -4,6 +4,7 @@
 
   --color-text: #000853;
   --color-bg: #eee6f6;
+  --color-gray: #898DA9;
   --color-form-element-bg: #ffffff;
   --color-border-default: #cbb6e5;
   --color-border-focus: #761be4;
