--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -3,7 +3,7 @@
     @apply font-medium
     h-12 px-3 text-base
     border-thin border-border-default rounded-lg
-    bg-form-element-bg
+    bg-bg-light
     outline-none
     focus:border-thick focus:border-border-focus;
   }
